--- a/home.html
+++ b/home.html
@@ -1,5 +1,94 @@
 <html>
-<body>
-<h1>Hai.....</h1>
+
+<head>
+
+<style>
+
+#header
+{
+background-color:black;
+color:white;
+text-align:center;
+padding:10px;
+height:100px;
+}
+#photo
+{
+line-height:30px;
+background-color:lightblue;
+height:550px;
+width:300px;
+float:right;
+padding:5px;
+text-align:center;
+}
+#links
+{
+background-color:dddddd;
+color:black;
+text-align:center;
+padding:5px;
+}
+#story
+{
+background-color:#ddeede;
+text-align:left;
+padding:10px;
+}
+#none
+{
+line-height:30px;
+background-color:#ddeede;
+height:480px;
+width:100px;
+float:left;
+padding:5px;
+}
+
+</style>
+</head>
+
+
+<body vlink="brown">
+<div id="header">
+
+<font face="Vladimir Script" size="16">Hi, Welcome...</font>
+</div>
+
+
+<div id="photo">
+Photo
+<br><br><br><br><br><br><br>
+<h2>Dhanya Simon</h2>
+Email id:
+ simondhanya@gmail.com
+<br><br>
+You can download my resume here!!!<br><a>Resume</a>
+</div>
+
+<div id="links">
+<h3><a href="file:///D:/dhanya/family.html">Family</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="file:///D:/dhanya/family.html">Educational Qualifications</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="file:///D:/dhanya/family.html">skills</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="file:///D:/dhanya/family.html">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="file:///D:/dhanya/family.html">Contact</a></h3>
+</div>
+
+<div id="none">
+</div>
+
+<div id="story">
+<font face="Lucida Calligraphy">
+<br><br><br><br><br>
+<p>Hi,</p>  
+<p>Thank you for your interest to visit my webpage. Actually, I created this website on an attempt to learn HTML, CSS, JavaScript and GitHub. But sincerly saying, I 
+
+have added only true details!! </p>
+<p>You can always suggest or give advice for the neccessary changes to make my website more attractive...</p>
+<p>Once again, Welcome to my website...Have a nice day!!! </p>
+<br><br><br><br><br><br><br>
+</div>
+
 </body>
+
 </html>
