--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@ Photo
 Email id:
  simondhanya@gmail.com
 <br><br>
-You can download my resume here!!!<br><a>Resume</a>
+You can download my resume here!!!<br><a><img src="https://cloud.githubusercontent.com/assets/15521534/12035893/e3fc9b32-ae66-11e5-8535-d06ffda18bbf.png"></img></a></a>
 </div>
 
 <div id="links">
