--- a/home.html
+++ b/home.html
@@ -57,8 +57,9 @@ padding:5px;
 
 
 <div id="photo">
-<img src="https://cloud.githubusercontent.com/assets/15521534/12036150/5025695e-ae69-11e5-88a8-3910f8772e39.jpg"></img>
-<br><br><br><br><br><br><br>
+ <br><br>
+<img src="https://cloud.githubusercontent.com/assets/15521534/12036150/5025695e-ae69-11e5-88a8-3910f8772e39.jpg" height="100" width="100"></img>
+<br><br>
 <h2>Dhanya Simon</h2>
 Email id:
  simondhanya@gmail.com
