--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@ padding:5px;
 
 <div id="photo">
  <br><br>
-<img src="https://cloud.githubusercontent.com/assets/15521534/12036150/5025695e-ae69-11e5-88a8-3910f8772e39.jpg" height="150" width="150"></img>
+<img src="https://cloud.githubusercontent.com/assets/15521534/12036150/5025695e-ae69-11e5-88a8-3910f8772e39.jpg"></img>
 <br><br>
 <h2>Dhanya Simon</h2>
 Email id:
